api/.tools/dev/ci-local-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-api.hotspot.local
  namespace: hotspot
  annotations:
    # cert-manager.io/cluster-issuer: kl-cert-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/upstream-vhost: ci-api.hotspot.local
spec:
  rules:
  - host: ci-api.hotspot.local
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tunneling
            port:
              number: 80
